@@ -72,9 +72,10 @@
  '(glasses-separator "")
  '(global-font-lock-mode t nil (font-lock))
  '(global-hl-line-hack-mode t nil (hl-line-hack))
+ '(global-semantic-decoration-mode t nil (semantic-decorate-mode))
  '(global-semantic-highlight-by-attribute-mode t nil (semantic-util-modes))
  '(global-semantic-highlight-edits-mode nil nil (semantic-util-modes))
- '(global-semantic-idle-scheduler-mode nil nil (semantic-idle))
+ '(global-semantic-idle-scheduler-mode t nil (semantic-idle))
  '(global-semantic-show-parser-state-mode t nil (semantic-util-modes))
  '(global-semantic-show-tag-boundaries-mode t nil (semantic-util-modes))
  '(global-semantic-show-unmatched-syntax-mode nil nil (semantic-util-modes))
