@@ -1,3 +1,8 @@
+2005-01-17  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* config/cedet-config.el:
+	disable semantic-load-turn-useful-things-on
+
 2005-01-16  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotemacs.el:
